--- a/lib/workouts.html
+++ b/lib/workouts.html
@@ -5,25 +5,28 @@
 		<link rel="icon" href="../favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="../_app/immutable/assets/_layout-9f83b41d.css" rel="stylesheet">
+		<link href="../_app/immutable/assets/_layout-5eabfcb9.css" rel="stylesheet">
+		<link href="../_app/immutable/assets/_layout-480aa73a.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_layout-658503d3.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/WorkoutCard-0df0f9bf.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/start-f83df8ee.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/index-6d0a9015.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons-7c5cf3ee.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-9526fde8.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/SmuiElement-dbb92510.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/classAdderBuilder-af2bd1e8.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/dispatch-49762ebd.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/Ripple-03e9247e.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores-e8904866.js">
+		<link rel="modulepreload" href="../_app/immutable/start-85935cf6.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/index-a3a376e9.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons-b650a49d.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-f4b3ea90.js">
 		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/lib/_layout.svelte-7bef4bfa.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/lib/workouts/_page.svelte-419b18ef.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/WorkoutCard-f29cb89b.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/ActionIcons-fa62cfc4.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/navigation-7aa17d52.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/(nav)/_layout.svelte-e1e12a1c.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/SmuiElement-51ae3714.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/classAdderBuilder-904c3c42.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/IconButton-2264ea67.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/dispatch-49762ebd.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/Ripple-dc56a77b.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores-09b749a2.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/(nav)/lib/_layout.svelte-e63f0fac.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/(nav)/lib/workouts/_page.svelte-eb573a6b.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/WorkoutCard-2718fbd9.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/ActionIcons-113dc778.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/navigation-8e773c7d.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/workout-61d879eb.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/exercise-fc101538.js">
 	</head>
@@ -40,7 +43,7 @@
 <link rel="stylesheet" href="/smui.css" media="(prefers-color-scheme: light)">
 <link rel="stylesheet" href="/smui-dark.css" media="screen and (prefers-color-scheme: dark)">
 
-<div class="wrapper svelte-vsvyj6"><div class="app-body svelte-vsvyj6"><div class="mdc-tab-bar" role="tablist"><div class="mdc-tab-scroller"><div class="mdc-tab-scroller__scroll-area" style=""><div class="mdc-tab-scroller__scroll-content" style=""><a class="mdc-tab" style="" role="tab" aria-selected="false" tabindex="-1" href="/lib"><span class="mdc-tab__content"><span class="mdc-tab__text-label">programs</span>
+<div class="wrapper svelte-ckh02c"><div class="app-body svelte-1kdfwnn"><div class="mdc-tab-bar" role="tablist"><div class="mdc-tab-scroller"><div class="mdc-tab-scroller__scroll-area" style=""><div class="mdc-tab-scroller__scroll-content" style=""><a class="mdc-tab" style="" role="tab" aria-selected="false" tabindex="-1" href="/lib"><span class="mdc-tab__content"><span class="mdc-tab__text-label">programs</span>
     </span>
   <span class="mdc-tab-indicator"><span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline" style=""></span>
 </span>
@@ -143,36 +146,35 @@
 <button class="mdc-fab smui-fab--color-primary" style="bottom: 1em; right: 1em; position: absolute;"><div class="mdc-fab__ripple"></div>
   
   <i class="material-icons mdc-fab__icon" aria-hidden="true">add</i></button></div>
-	
+
 
 <div class="smui-bottom-app-bar" style=""><div class="smui-bottom-app-bar__section smui-paper smui-paper--unelevated smui-paper--color-secondary" style="justify-content: space-around;"><a href="/work" class="undecorated svelte-bt2pnp"><button class="material-icons mdc-icon-button mdc-icon-button--display-flex" style="" aria-label="Excersize"><div class="mdc-icon-button__ripple"></div>
   fitness_center</button>
 </a>
-			<a href="/stats" class="undecorated svelte-bt2pnp"><button class="material-icons mdc-icon-button mdc-icon-button--display-flex" style="" aria-label="Analytics"><div class="mdc-icon-button__ripple"></div>
+		<a href="/stats" class="undecorated svelte-bt2pnp"><button class="material-icons mdc-icon-button mdc-icon-button--display-flex" style="" aria-label="Analytics"><div class="mdc-icon-button__ripple"></div>
   insights</button>
 </a>
-			<a href="/lib" class="undecorated svelte-bt2pnp underlined"><button class="material-icons mdc-icon-button mdc-icon-button--display-flex" style="" aria-label="Fitness Library"><div class="mdc-icon-button__ripple"></div>
+		<a href="/lib" class="undecorated svelte-bt2pnp underlined"><button class="material-icons mdc-icon-button mdc-icon-button--display-flex" style="" aria-label="Fitness Library"><div class="mdc-icon-button__ripple"></div>
   menu_book</button>
 </a>
-			<a href="/settings" class="undecorated svelte-bt2pnp"><button class="material-icons mdc-icon-button mdc-icon-button--display-flex" style="" aria-label="Settings"><div class="mdc-icon-button__ripple"></div>
+		<a href="/settings" class="undecorated svelte-bt2pnp"><button class="material-icons mdc-icon-button mdc-icon-button--display-flex" style="" aria-label="Settings"><div class="mdc-icon-button__ripple"></div>
   settings</button>
 </a>
 </div>
-</div>
-</div>
+</div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="12dtprz">
-			import { start } from "../_app/immutable/start-f83df8ee.js";
+		<script type="module" data-sveltekit-hydrate="xj57wb">
+			import { start } from "../_app/immutable/start-85935cf6.js";
 
 			start({
 				assets: "",
 				env: {},
-				target: document.querySelector('[data-sveltekit-hydrate="12dtprz"]').parentNode,
-				version: "1677437846175",
+				target: document.querySelector('[data-sveltekit-hydrate="xj57wb"]').parentNode,
+				version: "1677449057990",
 				hydrate: {
-					node_ids: [0, 2, 6],
-					data: [null,null,null],
+					node_ids: [0, 2, 3, 7],
+					data: [null,null,null,null],
 					form: null,
 					error: null
 				}
