--- a/stats.html
+++ b/stats.html
@@ -5,19 +5,22 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-9f83b41d.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-f83df8ee.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-6d0a9015.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-7c5cf3ee.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-9526fde8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/SmuiElement-dbb92510.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/classAdderBuilder-af2bd1e8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/dispatch-49762ebd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Ripple-03e9247e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores-e8904866.js">
+		<link href="./_app/immutable/assets/_layout-5eabfcb9.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_layout-480aa73a.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-85935cf6.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-a3a376e9.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-b650a49d.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-f4b3ea90.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/stats/_page.svelte-6a6e4567.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/(nav)/_layout.svelte-e1e12a1c.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/SmuiElement-51ae3714.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/classAdderBuilder-904c3c42.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/IconButton-2264ea67.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/dispatch-49762ebd.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Ripple-dc56a77b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores-09b749a2.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/(nav)/stats/_page.svelte-006785d4.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -32,37 +35,37 @@
 <link rel="stylesheet" href="/smui.css" media="(prefers-color-scheme: light)">
 <link rel="stylesheet" href="/smui-dark.css" media="screen and (prefers-color-scheme: dark)">
 
-<div class="wrapper svelte-vsvyj6"><div class="app-body svelte-vsvyj6"><h1>Analysis</h1></div>
-	
+<div class="wrapper svelte-ckh02c"><div class="app-body svelte-1kdfwnn"><h1>Analysis</h1>
+</div>
+
 
 <div class="smui-bottom-app-bar" style=""><div class="smui-bottom-app-bar__section smui-paper smui-paper--unelevated smui-paper--color-secondary" style="justify-content: space-around;"><a href="/work" class="undecorated svelte-bt2pnp"><button class="material-icons mdc-icon-button mdc-icon-button--display-flex" style="" aria-label="Excersize"><div class="mdc-icon-button__ripple"></div>
   fitness_center</button>
 </a>
-			<a href="/stats" class="undecorated svelte-bt2pnp underlined"><button class="material-icons mdc-icon-button mdc-icon-button--display-flex" style="" aria-label="Analytics"><div class="mdc-icon-button__ripple"></div>
+		<a href="/stats" class="undecorated svelte-bt2pnp underlined"><button class="material-icons mdc-icon-button mdc-icon-button--display-flex" style="" aria-label="Analytics"><div class="mdc-icon-button__ripple"></div>
   insights</button>
 </a>
-			<a href="/lib" class="undecorated svelte-bt2pnp"><button class="material-icons mdc-icon-button mdc-icon-button--display-flex" style="" aria-label="Fitness Library"><div class="mdc-icon-button__ripple"></div>
+		<a href="/lib" class="undecorated svelte-bt2pnp"><button class="material-icons mdc-icon-button mdc-icon-button--display-flex" style="" aria-label="Fitness Library"><div class="mdc-icon-button__ripple"></div>
   menu_book</button>
 </a>
-			<a href="/settings" class="undecorated svelte-bt2pnp"><button class="material-icons mdc-icon-button mdc-icon-button--display-flex" style="" aria-label="Settings"><div class="mdc-icon-button__ripple"></div>
+		<a href="/settings" class="undecorated svelte-bt2pnp"><button class="material-icons mdc-icon-button mdc-icon-button--display-flex" style="" aria-label="Settings"><div class="mdc-icon-button__ripple"></div>
   settings</button>
 </a>
 </div>
-</div>
-</div>
+</div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="1hck7wp">
-			import { start } from "./_app/immutable/start-f83df8ee.js";
+		<script type="module" data-sveltekit-hydrate="c1s8h3">
+			import { start } from "./_app/immutable/start-85935cf6.js";
 
 			start({
 				assets: "",
 				env: {},
-				target: document.querySelector('[data-sveltekit-hydrate="1hck7wp"]').parentNode,
-				version: "1677437846175",
+				target: document.querySelector('[data-sveltekit-hydrate="c1s8h3"]').parentNode,
+				version: "1677449057990",
 				hydrate: {
-					node_ids: [0, 9],
-					data: [null,null],
+					node_ids: [0, 2, 10],
+					data: [null,null,null],
 					form: null,
 					error: null
 				}
