--- a/edit/program.html
+++ b/edit/program.html
@@ -6,16 +6,18 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout-5eabfcb9.css" rel="stylesheet">
+		<link href="../_app/immutable/assets/_layout-203b2715.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page-eb452f06.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/Textfield-187e8a65.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/WorkoutCard-0df0f9bf.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/start-e91106fd.js">
+		<link rel="modulepreload" href="../_app/immutable/start-dcd84c9b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-be4f0507.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/singletons-bf7eef4e.js">
 		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-79163512.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/db-e7795e52.js">
 		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-da46b06b.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/(nonav)/_layout.svelte-ed9ceb81.js">
 		<link rel="modulepreload" href="../_app/immutable/components/pages/(nonav)/edit/program/_page.svelte-cb78a4b1.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/navigation-e792b297.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Button-995c0178.js">
@@ -40,7 +42,7 @@
 
 
 
-<div class="wrapper svelte-ckh02c">
+<div class="wrapper svelte-ckh02c"><div class="wrapper svelte-oxq7ch">
 
 
 <div class="mdc-dialog" role="alertdialog" aria-modal="true" aria-labelledby="back-title" aria-describedby="back-content"><div class="mdc-dialog__container"><div class="mdc-dialog__surface" role="alertdialog" aria-modal="true"><h2 class="mdc-dialog__title" id="back-title">Are you sure?</h2>
@@ -116,20 +118,20 @@
 	<button class="mdc-button mdc-button--outlined" style=""><div class="mdc-button__ripple"></div>
   <i class="material-symbols-rounded mdc-button__icon" aria-hidden="true">add</i></button>
 	
-</div></div>
+</div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="liom05">
-			import { start } from "../_app/immutable/start-e91106fd.js";
+		<script type="module" data-sveltekit-hydrate="9fuzs0">
+			import { start } from "../_app/immutable/start-dcd84c9b.js";
 
 			start({
 				assets: "",
 				env: {},
-				target: document.querySelector('[data-sveltekit-hydrate="liom05"]').parentNode,
-				version: "1678739343583",
+				target: document.querySelector('[data-sveltekit-hydrate="9fuzs0"]').parentNode,
+				version: "1678990826107",
 				hydrate: {
-					node_ids: [0, 13],
-					data: [null,null],
+					node_ids: [0, 4, 14],
+					data: [null,null,null],
 					form: null,
 					error: null
 				}
