--- a/edit/workout.html
+++ b/edit/workout.html
@@ -6,15 +6,17 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout-5eabfcb9.css" rel="stylesheet">
+		<link href="../_app/immutable/assets/_layout-203b2715.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page-2e6fe52d.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/Textfield-187e8a65.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/start-e91106fd.js">
+		<link rel="modulepreload" href="../_app/immutable/start-dcd84c9b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-be4f0507.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/singletons-bf7eef4e.js">
 		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-79163512.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/db-e7795e52.js">
 		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-da46b06b.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/(nonav)/_layout.svelte-ed9ceb81.js">
 		<link rel="modulepreload" href="../_app/immutable/components/pages/(nonav)/edit/workout/_page.svelte-353dfdbd.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CommonLabel-52730a4a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/SmuiElement-ff68b272.js">
@@ -39,7 +41,7 @@
 
 
 
-<div class="wrapper svelte-ckh02c">
+<div class="wrapper svelte-ckh02c"><div class="wrapper svelte-oxq7ch">
 
 
 <div class="mdc-dialog" role="alertdialog" aria-modal="true" aria-labelledby="default-focus-title" aria-describedby="default-focus-content"><div class="mdc-dialog__container"><div class="mdc-dialog__surface" role="alertdialog" aria-modal="true"><h2 class="mdc-dialog__title" id="default-focus-title">Are you sure?</h2>
@@ -97,20 +99,20 @@
 	<button class="mdc-button mdc-button--outlined" style=""><div class="mdc-button__ripple"></div>
   <i class="material-symbols-rounded mdc-button__icon" aria-hidden="true">add</i></button>
 	
-</div></div>
+</div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="bf0lgm">
-			import { start } from "../_app/immutable/start-e91106fd.js";
+		<script type="module" data-sveltekit-hydrate="16awhz7">
+			import { start } from "../_app/immutable/start-dcd84c9b.js";
 
 			start({
 				assets: "",
 				env: {},
-				target: document.querySelector('[data-sveltekit-hydrate="bf0lgm"]').parentNode,
-				version: "1678739343583",
+				target: document.querySelector('[data-sveltekit-hydrate="16awhz7"]').parentNode,
+				version: "1678990826107",
 				hydrate: {
-					node_ids: [0, 14],
-					data: [null,null],
+					node_ids: [0, 4, 15],
+					data: [null,null,null],
 					form: null,
 					error: null
 				}
