--- a/edit/exercise.html
+++ b/edit/exercise.html
@@ -6,15 +6,17 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout-5eabfcb9.css" rel="stylesheet">
+		<link href="../_app/immutable/assets/_layout-203b2715.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page-eb452f06.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/Textfield-187e8a65.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/start-e91106fd.js">
+		<link rel="modulepreload" href="../_app/immutable/start-dcd84c9b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-be4f0507.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/singletons-bf7eef4e.js">
 		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-79163512.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/db-e7795e52.js">
 		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-da46b06b.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/(nonav)/_layout.svelte-ed9ceb81.js">
 		<link rel="modulepreload" href="../_app/immutable/components/pages/(nonav)/edit/exercise/_page.svelte-6a2d1959.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/navigation-e792b297.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Button-995c0178.js">
@@ -36,7 +38,7 @@
 
 
 
-<div class="wrapper svelte-ckh02c">
+<div class="wrapper svelte-ckh02c"><div class="wrapper svelte-oxq7ch">
 
 
 <div class="mdc-dialog" role="alertdialog" aria-modal="true" aria-labelledby="default-focus-title" aria-describedby="default-focus-content"><div class="mdc-dialog__container"><div class="mdc-dialog__surface" role="alertdialog" aria-modal="true"><h2 class="mdc-dialog__title" id="default-focus-title">Are you sure?</h2>
@@ -126,20 +128,20 @@
 
 
 	
-</div></div>
+</div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="10r9e13">
-			import { start } from "../_app/immutable/start-e91106fd.js";
+		<script type="module" data-sveltekit-hydrate="5h3sg2">
+			import { start } from "../_app/immutable/start-dcd84c9b.js";
 
 			start({
 				assets: "",
 				env: {},
-				target: document.querySelector('[data-sveltekit-hydrate="10r9e13"]').parentNode,
-				version: "1678739343583",
+				target: document.querySelector('[data-sveltekit-hydrate="5h3sg2"]').parentNode,
+				version: "1678990826107",
 				hydrate: {
-					node_ids: [0, 12],
-					data: [null,null],
+					node_ids: [0, 4, 13],
+					data: [null,null,null],
 					form: null,
 					error: null
 				}
