--- a/stats/calendar.html
+++ b/stats/calendar.html
@@ -8,7 +8,7 @@
 		<link href="../_app/immutable/assets/_layout-5eabfcb9.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_layout-480aa73a.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page-1b713cc2.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/start-b530e40d.js">
+		<link rel="modulepreload" href="../_app/immutable/start-c35ac80b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-4d38a571.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/singletons-98163d21.js">
 		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-e535b0d6.js">
@@ -72,10 +72,10 @@
 			</div><div class="day svelte-13uaz1f" style=""><button class="btn-round small mdc-button mdc-button--unelevated smui-button--color-secondary" style=""><div class="mdc-button__ripple"></div>
   4
 				</button>
-			</div><div class="day svelte-13uaz1f" style=""><button class="btn-round small border mdc-button mdc-button--unelevated smui-button--color-secondary" style=""><div class="mdc-button__ripple"></div>
+			</div><div class="day svelte-13uaz1f" style=""><button class="btn-round small mdc-button mdc-button--unelevated smui-button--color-secondary" style=""><div class="mdc-button__ripple"></div>
   5
 				</button>
-			</div><div class="day svelte-13uaz1f" style=""><button class="btn-round small mdc-button mdc-button--unelevated smui-button--color-secondary" style=""><div class="mdc-button__ripple"></div>
+			</div><div class="day svelte-13uaz1f" style=""><button class="btn-round small border mdc-button mdc-button--unelevated smui-button--color-secondary" style=""><div class="mdc-button__ripple"></div>
   6
 				</button>
 			</div><div class="day svelte-13uaz1f" style=""><button class="btn-round small mdc-button mdc-button--unelevated smui-button--color-secondary" style=""><div class="mdc-button__ripple"></div>
@@ -170,14 +170,14 @@
 </div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="1ui2vaz">
-			import { start } from "../_app/immutable/start-b530e40d.js";
+		<script type="module" data-sveltekit-hydrate="1h7ngaj">
+			import { start } from "../_app/immutable/start-c35ac80b.js";
 
 			start({
 				assets: "",
 				env: {},
-				target: document.querySelector('[data-sveltekit-hydrate="1ui2vaz"]').parentNode,
-				version: "1680730586375",
+				target: document.querySelector('[data-sveltekit-hydrate="1h7ngaj"]').parentNode,
+				version: "1680732050784",
 				hydrate: {
 					node_ids: [0, 2, 4, 13],
 					data: [null,null,null,null],
