--- a/stats/list.html
+++ b/stats/list.html
@@ -7,8 +7,8 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout-5eabfcb9.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_layout-480aa73a.css" rel="stylesheet">
-		<link href="../_app/immutable/assets/_page-ce122c47.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/start-b530e40d.js">
+		<link href="../_app/immutable/assets/_page-a43353b9.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/start-c35ac80b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-4d38a571.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/singletons-98163d21.js">
 		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-e535b0d6.js">
@@ -27,7 +27,7 @@
 		<link rel="modulepreload" href="../_app/immutable/chunks/prefixFilter-9aa1f37f.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CommonLabel-bea53b37.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Svg-4d950ac6.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/(nav)/stats/list/_page.svelte-50af76bc.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/(nav)/stats/list/_page.svelte-ccdba08e.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/ActionIcons-091ea7d3.js"><title>Workout</title><!-- HEAD_svelte-vxyzc2_START --><link rel="stylesheet" href="/smui.css" media="(prefers-color-scheme: light)">
 		<link rel="stylesheet" href="/smui-dark.css" media="screen and (prefers-color-scheme: dark)"><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700"><!-- HEAD_svelte-vxyzc2_END -->
 	</head>
@@ -52,7 +52,7 @@
   <span class="mdc-tab__ripple"></span></a></div></div>
 </div>
 </div>
-<div class="body svelte-1y4xcny">
+<div class="body svelte-1nk3bmq">
 </div></div>
 
 
@@ -72,14 +72,14 @@
 </div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="6kiaqs">
-			import { start } from "../_app/immutable/start-b530e40d.js";
+		<script type="module" data-sveltekit-hydrate="rk6dv1">
+			import { start } from "../_app/immutable/start-c35ac80b.js";
 
 			start({
 				assets: "",
 				env: {},
-				target: document.querySelector('[data-sveltekit-hydrate="6kiaqs"]').parentNode,
-				version: "1680730586375",
+				target: document.querySelector('[data-sveltekit-hydrate="rk6dv1"]').parentNode,
+				version: "1680732050784",
 				hydrate: {
 					node_ids: [0, 2, 4, 14],
 					data: [null,null,null,null],
