--- a/stats/calendar.html
+++ b/stats/calendar.html
@@ -8,11 +8,11 @@
 		<link href="../_app/immutable/assets/_layout-5eabfcb9.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_layout-480aa73a.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page-1b713cc2.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/start-c35ac80b.js">
+		<link rel="modulepreload" href="../_app/immutable/start-bbbfa175.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-4d38a571.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/singletons-98163d21.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-e535b0d6.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/db-98e035ad.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-ef370281.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/db-428befe0.js">
 		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-9cbb603b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-da46b06b.js">
 		<link rel="modulepreload" href="../_app/immutable/components/pages/(nav)/_layout.svelte-d9e4615b.js">
@@ -27,7 +27,7 @@
 		<link rel="modulepreload" href="../_app/immutable/chunks/prefixFilter-9aa1f37f.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CommonLabel-bea53b37.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Svg-4d950ac6.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/(nav)/stats/calendar/_page.svelte-b7471914.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/(nav)/stats/calendar/_page.svelte-6408e83e.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/navigation-7bb805b1.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Button-c8a2d92e.js"><title>Workout</title><!-- HEAD_svelte-vxyzc2_START --><link rel="stylesheet" href="/smui.css" media="(prefers-color-scheme: light)">
 		<link rel="stylesheet" href="/smui-dark.css" media="screen and (prefers-color-scheme: dark)"><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700"><!-- HEAD_svelte-vxyzc2_END -->
@@ -75,7 +75,7 @@
 			</div><div class="day svelte-13uaz1f" style=""><button class="btn-round small mdc-button mdc-button--unelevated smui-button--color-secondary" style=""><div class="mdc-button__ripple"></div>
   5
 				</button>
-			</div><div class="day svelte-13uaz1f" style=""><button class="btn-round small border mdc-button mdc-button--unelevated smui-button--color-secondary" style=""><div class="mdc-button__ripple"></div>
+			</div><div class="day svelte-13uaz1f" style=""><button class="btn-round small mdc-button mdc-button--unelevated smui-button--color-secondary" style=""><div class="mdc-button__ripple"></div>
   6
 				</button>
 			</div><div class="day svelte-13uaz1f" style=""><button class="btn-round small mdc-button mdc-button--unelevated smui-button--color-secondary" style=""><div class="mdc-button__ripple"></div>
@@ -114,7 +114,7 @@
 			</div><div class="day svelte-13uaz1f" style=""><button class="btn-round small mdc-button mdc-button--unelevated smui-button--color-secondary" style=""><div class="mdc-button__ripple"></div>
   18
 				</button>
-			</div><div class="day svelte-13uaz1f" style=""><button class="btn-round small mdc-button mdc-button--unelevated smui-button--color-secondary" style=""><div class="mdc-button__ripple"></div>
+			</div><div class="day svelte-13uaz1f" style=""><button class="btn-round small border mdc-button mdc-button--unelevated smui-button--color-secondary" style=""><div class="mdc-button__ripple"></div>
   19
 				</button>
 			</div><div class="day svelte-13uaz1f" style=""><button class="btn-round small mdc-button mdc-button--unelevated smui-button--color-secondary" style=""><div class="mdc-button__ripple"></div>
@@ -170,14 +170,14 @@
 </div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="1h7ngaj">
-			import { start } from "../_app/immutable/start-c35ac80b.js";
+		<script type="module" data-sveltekit-hydrate="gp2ojf">
+			import { start } from "../_app/immutable/start-bbbfa175.js";
 
 			start({
 				assets: "",
 				env: {},
-				target: document.querySelector('[data-sveltekit-hydrate="1h7ngaj"]').parentNode,
-				version: "1680732050784",
+				target: document.querySelector('[data-sveltekit-hydrate="gp2ojf"]').parentNode,
+				version: "1681925018675",
 				hydrate: {
 					node_ids: [0, 2, 4, 13],
 					data: [null,null,null,null],
